--- a/src/view/home.ejs
+++ b/src/view/home.ejs
@@ -6,12 +6,12 @@
 	</head>
 	<body class="container">
 		<div class="col-md-6 col-md-offset-3">
-            <h1>Welcome our websiteeeeeeee</h1>
+            <h1>Welcome to our websiteeeeeeee</h1>
         	</body>
 </html>
 
 <div id="form">
-    <p>Please login to your account</p>
+    <p>What do you want to do ?</p>
     <hr/>
 	<form action="/login" method="post">
 		<div class="form-group">
