--- a/src/view/login.ejs
+++ b/src/view/login.ejs
@@ -1,3 +1,16 @@
+
+  
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<% include partials/head %>
+	</head>
+	<body class="container">
+		<div class="col-md-6 col-md-offset-3">
+            <h1>LOGIN PAGE</h1>
+        	</body>
+</html>
+
 <div id="form">
     <hr/>
     <form action="/login" method="post">
