--- a/src/view/login.ejs
+++ b/src/view/login.ejs
@@ -29,7 +29,7 @@
       <button class="btn btn-primary btn-block" type="submit" value="Submit">Connect</button>
     </form>
     <hr/>
-    <button class="btn btn-success btn-block" type="submit" onClick='document.location.href="/register.ejs"'>
+    <button class="btn btn-success btn-block" type="submit" href="/register">
       Create an account
     </button>
     <button class="btn btn-danger" href="/home" onClick='document.location.href="/home"'>
