--- a/src/view/login.ejs
+++ b/src/view/login.ejs
@@ -29,10 +29,12 @@
       <button class="btn btn-primary btn-block" type="submit" value="Submit">Connect</button>
     </form>
     <hr/>
-    <button class="btn btn-success btn-block" type="submit" href="/register">
+    <button class="btn btn-success btn-block" type="submit" href="/register" onClick='document.location.href="/register"'>
       Create an account
     </button>
+    <hr/>
+
     <button class="btn btn-danger" href="/home" onClick='document.location.href="/home"'>
-        Logouttttt
+        Logout
       </button>
   </div>
