--- a/src/view/hello.ejs
+++ b/src/view/hello.ejs
@@ -5,7 +5,7 @@
 	</head>
 	<body class="container">
 		<div class="col-md-6 col-md-offset-3">
-			<h1>Hello</h1>
+			<h1>Hello <%=name %></h1>
 			<button class="btn btn-success" id="show-metrics">
 				Bring the metrics
 			</button>
@@ -24,7 +24,7 @@
 		  </ul>
 			</div>
 
-			<h2> Converters : </h2>
+			<h2> Conversion : </h2>
 
 			<form class="text-justify" action="/convert" method="post">
 			  <div>
@@ -47,7 +47,7 @@
 		
 			<br/>
 		
-			<h2> Now add or delete your metrics !</h2>
+			<h2> Add or delete some metrics</h2>
 			<form class="text-justify" action="/add" method="post">
 			  <div>
 				<label for="form_timestamp">Timestamp : </label>
@@ -67,12 +67,8 @@
 			</form>
 		
 			<br/>
-			<br/>
-		
-		
+			
 		</div>
-		
-		
 		  </body>
 		</html>
 		
