--- a/src/view/register.ejs
+++ b/src/view/register.ejs
@@ -1,10 +1,26 @@
+
+  
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<% include partials/head %>
+	</head>
+	<body class="container">
+		<div class="col-md-6 col-md-offset-3">
+            <h1>SIGN UP</h1>
+        	</body>
+</html>
+
 <div id="form">
-    <p>Sign up</p>
     <hr/>
-    <form action="/login" method="post">
+    <form action="/register" method="post">
       <div class="form-group">
-        <label for="form_username">Mail</label>
+        <label for="form_username">Username</label>
         <input id="form_username" type="text" name="username" required/>
+      </div>
+      <div class="form-group">
+        <label for="form_mail">Mail</label>
+        <input id="form_mail" type="text" name="mail" required/>
       </div>
       <div class="form-group">
         <label for="form_password">Password</label>
